--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: c
-script: asdf plugin-test sqlite $TRAVIS_BUILD_DIR 'node --version'
+script: asdf plugin-test sqlite $TRAVIS_BUILD_DIR 'sqlite3 --version'
 before_script:
   - git clone https://github.com/asdf-vm/asdf.git asdf
   - . asdf/asdf.sh
