feat: Add shfmt

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,3 +18,18 @@ jobs:
 
       - name: Run ShellCheck
         run: scripts/shellcheck.bash
+
+  shellfmt:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install asdf dependencies
+        uses: asdf-vm/actions/install@v1
+
+      - name: List file to shfmt
+        run: shfmt -f .
+
+      - name: Run shfmt
+        run: scripts/shfmt.bash
