--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,12 @@ jobs:
           - macos-latest
     runs-on: ${{ matrix.os }}
     steps:
+      - name: Install ICU
+        run: |
+          if [[ $(uname) == "Linux" ]]; then
+            apt install libicu-dev
+          fi
+
       - name: asdf_plugin_test
         uses: asdf-vm/actions/plugin-test@v2
         with:
