--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
           - ubuntu-latest
           #- macos-latest
     runs-on: ${{ matrix.os }}
+    env:
+      TRACE: "1"
     steps:
       - name: Install ICU
         run: |
