--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,9 @@ jobs:
     env:
       TRACE: "1"
     steps:
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
+
       - name: asdf_plugin_test
         uses: asdf-vm/actions/plugin-test@v3
         with:
