--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,11 @@ jobs:
     env:
       TRACE: "1"
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - uses: asdf-vm/actions/install@v4
+
       - name: Setup upterm session
         uses: lhotari/action-upterm@v1
 
